# sdk

./: .gitignore  .vrl-export.json  README.md
.github/workflows/: ci.yml  publish.yml
sdk/go/: README.md  go.mod
sdk/go/cmd/vrl-verify/: main.go
sdk/go/example/: main.go
sdk/python/: PUBLISHING.md  README.md  pyproject.toml  setup.py
sdk/python/examples/: build_and_verify.py
sdk/python/vrl/: __init__.py
sdk/typescript/: package.json
sdk/typescript/tests/: bundle.test.js
