[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrl-sdk"
version = "0.2.1"
description = "Python SDK for the Verifiable Reality Layer (VRL) Proof Bundle Specification v1.0"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Verifiable Reality Layer Contributors", email = "info@vrl.io"}]
keywords = ["vrl", "zero-knowledge", "zkp", "ai-verification", "proof-bundle", "cryptography", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/vrl-protocol/sdk"
Repository = "https://github.com/vrl-protocol/sdk"
Documentation = "https://github.com/vrl-protocol/sdk/tree/main/sdk/python"
"Bug Tracker" = "https://github.com/vrl-protocol/sdk/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vrl*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
